<resources>
    <string name="app_name">Contours</string>
    <string name="action_settings">Settings</string>
    <string name="keyboard_description">a simple keyboard widget</string>
    <string name="pianoButton">Piano</string>
    <string name="analogButton">80\'s Synth</string>
    <string name="stringsButton">Strings</string>
    <string name="fluteButton">Enigma Flute</string>
    <string name="banjoButton">Banjo</string>
    <string name="title_activity_main">Contours</string>
    <string name="score_text">Score:</string>
    <string name="loading">Loading...</string>
    <string name="zero_text">0</string>
    <string name="start_multiplier">x1</string>
    <string name="play_button_text">play</string>
    <string name="easy_difficulty_text">easy</string>
    <string name="medium_difficulty_text">medium</string>
    <string name="hard_difficulty_text">hard</string>
    <string name="title_activity_end_report">End Report</string>

    <string name="hello_world">Hello world!</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="difficulty_question">How difficult was the task?</string>
    <string name="difference_question">How different did the contours sound from each other?</string>
    <string name="improving_question">Do you think you are improving at the task?</string>
    <string name="total_string_text">Total Score&#160;</string>
    <string name="total_time_text">Total Time&#160;</string>
    <string name="notes_hit_text">Notes Played&#160;</string>
    <string name="accuracy_text">Accuracy&#160;</string>
    <string name="success_text">Success!</string>
    <string name="survey_next_text"><![CDATA[next>]]></string>
    <string name="serv_addr">http://contours.herokuapp.com</string>
    <string name="add_score_set">addScoreSet</string>
    <string name="add_survey_response">addSurveyResponse</string>
    <string name="contours_logo_img_desc">contours logo</string>
    <string name="footer_text">Developed by Thomas Colgrove</string>
    <string name="tufts_logo_description">tufts logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="select_alias_text">Welcome! Since this is your first time using the Contours
    application, please provide an alphanumeric alias of 5-12 characters. This alias will be used to identify
        you in test results.</string>
    <string name="alias_text">Alias:</string>
    <string name="login_done_text">DONE</string>
    <string name="elapsed_time_label">elapsed time</string>
    <string name="localhost">https://trcolgrove.pagekite.me/</string>
    <string name="author_string">Developed at Tufts University by Thomas Colgrove and Aniruddh D. Patel</string>
    <string name="funding_string">with funding from the Paul S. Veneklasen Foundation</string>
    <string name="version_text">version 1.0</string>
</resources>
