<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.trcolgrove.contours.activities.LoginActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <TextView android:text="@string/select_alias_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/turquoise"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:id="@+id/intro_text"
        android:layout_marginBottom="32dp"/>

    <EditText android:id="@+id/alias_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_below="@+id/intro_text"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:inputType="textPersonName"
        android:imeActionId="@+id/alias_input"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:layout_toLeftOf="@id/alias_select"
        android:layout_toStartOf="@id/alias_select"
        android:layout_alignBaseline="@id/alias_select"
        android:text="@string/alias_text"
        android:color="@color/white"
        android:id="@+id/alias_text" />

    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/play_button"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:text="@string/login_done_text"
        android:onClick="doneButtonClicked"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:clickable="true"
        android:layout_below="@id/alias_select"
        android:id="@+id/done_button" />


</RelativeLayout>
