<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:Piano="http://schemas.android.com/apk/res-auto"
    xmlns:Staff="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".TrainingActivity"
    android:id="@+id/main_layout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:id="@+id/linear">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:indeterminate="true"
            android:text="@string/loading"
            android:id="@+id/training_loader"/>
        <RelativeLayout
            android:background="@color/turquoise"
            android:alpha="70"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize ="45sp"
                android:textColor="@color/white"
                android:text="@string/score_text"
                android:id="@+id/score_label"/>

            <TextSwitcher
                android:layout_toRightOf="@id/score_label"
                android:layout_toEndOf="@id/score_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textSize ="45sp"
                android:textColor="@color/white"
                android:text="@string/zero_text"
                android:id="@+id/score_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize ="45sp"
                android:textColor="@color/white"
                android:text=""
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:maxEms="3"
                android:minEms="3"
                android:layout_toRightOf="@id/score_text"
                android:layout_toEndOf="@id/score_text"
                android:id="@+id/score_increment"/>

            <TextSwitcher
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/score_increment"
                android:layout_toEndOf="@id/score_increment"
                android:gravity="center"
                android:textSize ="45sp"
                android:text="@string/start_multiplier"
                android:background="@drawable/multiplierbg_1"
                android:id="@+id/multiplier"
            />

            <View style="@style/VerticalDivider"
                android:layout_toRightOf="@id/score_increment"
                android:layout_toEndOf="@id/score_increment"
                android:layout_margin="8dp"
                android:id="@+id/score_bar_divider" />

            <Chronometer
                android:layout_marginLeft="0dp"
                android:layout_marginRight="24dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:id="@+id/chronometer"
                android:gravity="end"
                android:textSize="45sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@id/chronometer"
                android:layout_toLeftOf="@id/chronometer"
                android:src="@drawable/clock"/>
        </RelativeLayout>

        <com.trcolgrove.contours.contoursGame.ContoursGameView
            android:id="@+id/staff"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="60"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            Staff:bottomNote="48"
            Staff:topNote="84"
        />
        <View style="@style/KeyboardDivider" />
        <com.trcolgrove.colorfulPiano.Piano
            android:id="@+id/piano"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="20"
            Piano:key_count="37"
        />
    </LinearLayout>

</RelativeLayout>
